--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -195,43 +195,86 @@
                             <constraint firstItem="iKv-1U-PSJ" firstAttribute="leading" secondItem="4P3-FO-N7s" secondAttribute="leading" id="hLj-vU-8xe"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Home" id="0PD-rI-6Qo">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="iNF-sr-jIT">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="QE0-GB-N3B">
-                                <rect key="frame" x="16" y="7" width="70" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Sign Out">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="onLogout:" destination="laX-w7-dqY" eventType="touchUpInside" id="iE8-sh-U1S"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="9SL-NC-2y1">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="bib-6I-7LK" userLabel="Compose">
-                                <rect key="frame" x="-23" y="-15" width="71" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Compose">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="onCompose:" destination="laX-w7-dqY" eventType="touchUpInside" id="fY8-As-O5e"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Home" id="0PD-rI-6Qo"/>
                     <connections>
-                        <outlet property="tableView" destination="iKv-1U-PSJ" id="G9t-Ou-hO2"/>
+                        <outlet property="tableView" destination="iKv-1U-PSJ" id="tU7-St-gdG"/>
                         <segue destination="Kmg-F2-G5f" kind="modal" identifier="ShowTweetSegue" id="RnB-zr-B55"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L8r-1y-6nj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1848" y="328"/>
+        </scene>
+        <!--Menu View Controller-->
+        <scene sceneID="I9T-cY-xUa">
+            <objects>
+                <viewController storyboardIdentifier="MenuViewController" id="DJH-tm-SGN" customClass="MenuViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iFc-Sl-N3r"/>
+                        <viewControllerLayoutGuide type="bottom" id="0au-4Q-Qdg"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ecc-uZ-5cs">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MxD-U8-SCX">
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="BFH-Tj-hy8"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="bHS-IL-HXj" style="IBUITableViewCellStyleDefault" id="Edo-Ha-0LA">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Edo-Ha-0LA" id="wgS-0i-Ssw">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="bHS-IL-HXj">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TiZ-TG-h25">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="mfP-pz-7Q7" appends="YES" id="h9c-L4-mhV"/>
+                                </connections>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="TiZ-TG-h25" firstAttribute="width" secondItem="ecc-uZ-5cs" secondAttribute="width" id="AZB-MF-0xS"/>
+                            <constraint firstAttribute="centerY" secondItem="TiZ-TG-h25" secondAttribute="centerY" id="ZlM-S4-FqU"/>
+                            <constraint firstItem="TiZ-TG-h25" firstAttribute="height" secondItem="ecc-uZ-5cs" secondAttribute="height" id="cIn-X0-N94"/>
+                            <constraint firstItem="MxD-U8-SCX" firstAttribute="top" secondItem="ecc-uZ-5cs" secondAttribute="top" id="jcl-VT-Z1N"/>
+                            <constraint firstAttribute="centerX" secondItem="TiZ-TG-h25" secondAttribute="centerX" id="lna-JG-xCc"/>
+                            <constraint firstAttribute="bottom" secondItem="MxD-U8-SCX" secondAttribute="bottom" id="pVr-p8-XGx"/>
+                            <constraint firstItem="MxD-U8-SCX" firstAttribute="leading" secondItem="ecc-uZ-5cs" secondAttribute="leading" id="yyF-lB-v6S"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="PiX-Jd-4Py"/>
+                    <connections>
+                        <outlet property="activeViewContainer" destination="TiZ-TG-h25" id="RAJ-Zo-GWW"/>
+                        <outlet property="activeViewXConstraint" destination="lna-JG-xCc" id="IUd-j4-UZk"/>
+                        <outlet property="tableView" destination="MxD-U8-SCX" id="awt-6R-Xgf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="78Z-My-Qbj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="mfP-pz-7Q7">
+                    <connections>
+                        <action selector="didSwipe:" destination="DJH-tm-SGN" id="lbr-D9-2uc"/>
+                    </connections>
+                </swipeGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="2262" y="991"/>
         </scene>
         <!--Tweet-->
         <scene sceneID="WQy-ax-nPs">
@@ -381,7 +424,7 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="dDU-PH-6Y4">
                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Home">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -394,7 +437,7 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rqq-Of-glZ">
                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Compose">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -511,10 +554,10 @@
                     </view>
                     <navigationItem key="navigationItem" title="Compose" id="NYo-aO-K74">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="AO4-ub-MaS">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="M3N-ey-WlD">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="M3N-ey-WlD">
                                 <rect key="frame" x="-23" y="-15" width="71" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
