--- a/Twitter/Base.lproj/Main.storyboard
+++ b/Twitter/Base.lproj/Main.storyboard
@@ -4,7 +4,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--Twitter-->
+        <!--Login-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" id="vXZ-lx-hvc" customClass="LoginViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z79-N2-sEW">
-                                <rect key="frame" x="80" y="269" width="160" height="30"/>
-                                <color key="backgroundColor" red="0.33333333329999998" green="0.67450980390000004" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <rect key="frame" x="80" y="244" width="160" height="35"/>
+                                <color key="backgroundColor" red="0.4431372549" green="0.71764705880000002" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="160" id="VsP-P0-B8g"/>
-                                    <constraint firstAttribute="height" constant="30" id="jve-sg-gNu"/>
+                                    <constraint firstAttribute="height" constant="35" id="jve-sg-gNu"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Log in">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Log in with Twitter">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -32,11 +32,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="z79-N2-sEW" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="180" id="Bl0-ft-4GB"/>
                             <constraint firstAttribute="centerX" secondItem="z79-N2-sEW" secondAttribute="centerX" id="cTu-lH-Gag"/>
-                            <constraint firstAttribute="centerY" secondItem="z79-N2-sEW" secondAttribute="centerY" id="i3J-Bo-1WJ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Twitter" id="UZa-Mp-7JS"/>
+                    <navigationItem key="navigationItem" title="Login" id="UZa-Mp-7JS"/>
                     <connections>
                         <outlet property="loginButton" destination="z79-N2-sEW" id="wdC-o2-N20"/>
                         <segue destination="Dry-nX-KoF" kind="modal" identifier="loginSegue" id="HtH-Yh-hW8"/>
@@ -46,10 +46,10 @@
             </objects>
             <point key="canvasLocation" x="1023" y="328"/>
         </scene>
-        <!--Timeline-->
+        <!--Home-->
         <scene sceneID="Bin-om-Pcd">
             <objects>
-                <viewController storyboardIdentifier="TweetsViewController" title="Timeline" id="laX-w7-dqY" customClass="TweetsViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TweetsViewController" title="Home" id="laX-w7-dqY" customClass="TweetsViewController" customModule="Twitter" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="lZT-z2-FNc"/>
                         <viewControllerLayoutGuide type="bottom" id="C5w-Ty-DFZ"/>
